--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "eclint": "^2.0.1",
     "jquery": "^3.3.1",
     "jshint": "2.9.5",
-    "karma": "^1.3.0",
+    "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-ie-launcher": "^1.0.0",
-    "karma-qunit": "^1.2.1",
-    "qunitjs": "^2.1.1",
+    "karma-qunit": "^2.0.0",
+    "qunit": "^2.0.0",
     "typescript": "^2.0.10",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.0.0",
