Enable RemoteGrouping for EF Core (closes #181) (#266)

--- a/net/Sample/Sample.csproj
+++ b/net/Sample/Sample.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DevExtreme.AspNet.Data\DevExtreme.AspNet.Data.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0-*" />
   </ItemGroup>
 
   <!-- https://github.com/dotnet/sdk/issues/1055#issuecomment-292792445 -->
