--- a/net/DevExtreme.AspNet.Data.Tests.L2S/DevExtreme.AspNet.Data.Tests.L2S.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.L2S/DevExtreme.AspNet.Data.Tests.L2S.csproj
@@ -87,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RemoteGroupingStress.cs" />
+    <Compile Include="Summary.cs" />
     <Compile Include="TestDataClasses.cs">
       <DependentUpon>TestDataClasses.dbml</DependentUpon>
     </Compile>
