--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "karma-bundled-nojquery-cjs": "cd js-test && webpack --mode=development --define ASPNET_DATA_SCRIPT='../js-nojquery/index.js' --define define=false test.js -o test-bundle.js && karma start --bundled",
     "dts": "cd js-test && tsc check-ts-compilation.ts && tsc check-ts-compilation.nojquery.ts",
     "eslint": "eslint .",
-    "eclint": "eclint check *.{yml,json} {net,js,js-test}/**/*.{cs,js,ts,html,json,cshtml,tt} !net/**/{bin,obj}/** !net/docfx/build/** !js-test/test-bundle.js !net/Sample/{node_modules,wwwroot/lib}/**"
+    "eclint": "eclint check *.{yml,json} {net,js,js-test}/**/*.{cs,js,ts,html,json,cshtml,tt} !net/**/{bin,obj}/** !**/*.designer.cs !net/docfx/build/** !js-test/test-bundle.js !net/Sample/{node_modules,wwwroot/lib}/**"
   }
 }
