Use GroupBy(const) for total summary

--- a/net/DevExtreme.AspNet.Data.Tests.L2S/DevExtreme.AspNet.Data.Tests.L2S.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.L2S/DevExtreme.AspNet.Data.Tests.L2S.csproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <Compile Include="RemoteGroupingStress.cs" />
     <Compile Include="Summary.cs" />
+    <Compile Include="T670222_TotalSummary.cs" />
     <Compile Include="TestDataClasses.cs">
       <DependentUpon>TestDataClasses.dbml</DependentUpon>
     </Compile>
