--- a/net/DevExtreme.AspNet.Data.Tests.L2S/DevExtreme.AspNet.Data.Tests.L2S.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.L2S/DevExtreme.AspNet.Data.Tests.L2S.csproj
@@ -89,6 +89,7 @@
     <Compile Include="RemoteGroupingStress.cs" />
     <Compile Include="Summary.cs" />
     <Compile Include="T670222_TotalSummary.cs" />
+    <Compile Include="T670222_UnusedAnonTypeMembers.cs" />
     <Compile Include="TestDataClasses.cs">
       <DependentUpon>TestDataClasses.dbml</DependentUpon>
     </Compile>
