--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "karma-coverage": "^1.1.1",
     "karma-ie-launcher": "^1.0.0",
     "karma-qunit": "^2.0.0",
-    "qunit": "^2.0.0",
+    "qunit": "~2.6.0",
     "typescript": "^2.0.10",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.0.0",
