--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,10 @@ test_script:
   - npm run eclint
   - npm run eslint
 
-  - npm i --no-save "devextreme@>=18.1.0"
+  - npm i --no-save "devextreme@~18.1.0"
+  - npm run karma
+
+  - npm i --no-save "devextreme@>=18.2.0"
   - npm run karma
   - npm run karma-bundled
   - npm run karma-bundled-nojquery
