--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "devextreme": ">=18.1.0"
   },
   "devDependencies": {
+    "@angular/common": "^6.0.0",
+    "@angular/core": "^6.0.0",
     "@types/jquery": "^2.0.39",
     "bluebird": "^3.5.1",
     "eclint": "^2.0.1",
@@ -29,6 +31,7 @@
     "karma-ie-launcher": "^1.0.0",
     "karma-qunit": "^2.0.0",
     "qunit": "^2.0.0",
+    "rxjs": "^6.0.0",
     "typescript": "^2.0.10",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.0.0",
