--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,9 +23,11 @@ test_script:
   - npm run eslint
 
   - npm i --no-save "devextreme@~18.1.0"
+  - npm run dts
   - npm run karma
 
   - npm i --no-save "devextreme@>=18.2.0"
+  - npm run dts
   - npm run karma
   - npm run karma-bundled
   - npm run karma-bundled-nojquery
