--- a/net/DevExtreme.AspNet.Data.Tests.EFCore3/DevExtreme.AspNet.Data.Tests.EFCore3.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.EFCore3/DevExtreme.AspNet.Data.Tests.EFCore3.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0-rc1.19456.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
