--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,7 @@ install:
   - node build/make-nojquery
   - node build/replace-meta "%APPVEYOR_BUILD_NUMBER%" "%APPVEYOR_REPO_TAG_NAME%" "%APPVEYOR_REPO_NAME%"
   - npm install
+  - cd net\Sample && npm i
   - dotnet restore net\DevExtreme.AspNet.Data.sln
   - nuget restore net\DevExtreme.AspNet.Data.sln -Verbosity quiet
 
