--- a/net/Sample/Sample.csproj
+++ b/net/Sample/Sample.csproj
@@ -7,11 +7,11 @@
   <ItemGroup>
     <ProjectReference Include="..\DevExtreme.AspNet.Data\DevExtreme.AspNet.Data.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
   </ItemGroup>
 
-  <!-- https://github.com/dotnet/sdk/issues/1055#issuecomment-292792445 -->
-  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="xcopy /y &quot;$(ProjectDir)\..\..\js\*.js&quot; &quot;$(ProjectDir)\wwwroot\lib\&quot;" />
+  <Target Name="Clean dx-aspnet-data-js" BeforeTargets="LibraryManagerRestore">
+    <Delete Files="wwwroot/lib/dx.aspnet.data.js" />
   </Target>
 
 </Project>
